# claude-code-easyhooks

./: .cruft.json  AGENTS.md  LICENSE  Makefile  README.md  easyhooks.py  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml  python-publish.yml  update-template.yml
docs/: Makefile  conf.py  index.rst  make.bat
easyhooks/: __init__.py  main.py  models.py
examples/: deny_git_commit_no_verify.py  enforce_ripgrep.py
tests/: __init__.py  test_cli.py  test_easyhooks.py
tests/easyhooks/: print_command.py
