[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry]
name = "claude-code-easyhooks"
description = "Micro-framework to create hooks for Claude Code"
version = "0.0.1"
keywords = ["claude-code-easyhooks", "claude", "claude code", "agents", "hooks", "easyhooks"]
license = "LICENSE"
readme = "README.md"
include = ["LICENSE", "README.md"]
exclude = ["contrib", "docs", "test*"]
homepage = "https://github.com/lucasrcezimbra/claude-code-easyhooks"
documentation = "https://claude-code-easyhooks.readthedocs.io/"
repository = "https://github.com/lucasrcezimbra/claude-code-easyhooks"
authors = [
  "Lucas Rangel Cezimbra <lucas@cezimbra.tec.br>",
]
packages = [
  { include = "easyhooks.py" },
]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]

[tool.poetry.scripts]
claude-code-easyhooks = "easyhooks:_cli"
cc-easyhooks = "easyhooks:_cli"
easyhooks = "easyhooks:_cli"
cceh = "easyhooks:_cli"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
build = "1.3.0"
bump2version = "1.0.1"
coverage = "7.4.4"
cruft = "2.15.0"
faker = "24.8.0"
pre-commit = "3.7.0"
pytest = "8.1.1"
pytest-cov = "5.0.0"
pytest-deadfixtures = "2.2.1"
pytest-mock = "3.14.0"

[tool.poetry.group.docs.dependencies]
myst-parser = "2.0.0"
Sphinx = "7.2.6"
sphinx-rtd-theme = "2.0.0"


[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--doctest-modules"


[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
line-length = 88
